# tech-pocs

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
ocaml/bitonic-sequence/: .gitignore  README.md  bitonic.ml  bitonic_sequence.opam  bitonic_test.ml  docker-compose.yml  dune  dune-project  simple_bench.ml  summary.html
ocaml/bitonic-sequence/_build/: .db  .digest-db  log  oUnit-Bitonic tests.cache
ocaml/bitonic-sequence/_build/default/: bitonic.cma  bitonic.cmxa  bitonic.cmxs  bitonic.ml  bitonic.mli  bitonic_test.ml  rest_server.ml
ocaml/bitonic-sequence/_build/default/.bitonic.objs/byte/: bitonic.cmi  bitonic.cmo  bitonic.cmt  bitonic.cmti
ocaml/bitonic-sequence/_build/default/.bitonic.objs/native/: bitonic.cmx
ocaml/bitonic-sequence/_build/default/.bitonic_test.eobjs/byte/: dune__exe__Bitonic_test.cmi  dune__exe__Bitonic_test.cmti
ocaml/bitonic-sequence/_build/default/.bitonic_test.eobjs/native/: dune__exe__Bitonic_test.cmx
ocaml/bitonic-sequence/_build/default/.dune/: configurator  configurator.v2
ocaml/bitonic-sequence/_build/default/.merlin-conf/: exe-bitonic_test  exe-rest_server  exe-simple_bench  lib-bitonic
ocaml/bitonic-sequence/_build/default/.rest_server.eobjs/byte/: dune__exe__Rest_server.cmi  dune__exe__Rest_server.cmti
ocaml/bitonic-sequence/_build/default/.rest_server.eobjs/native/: dune__exe__Rest_server.cmx
ocaml/bitonic-sequence/_build/default/.simple_bench.eobjs/byte/: dune__exe__Simple_bench.cmi  dune__exe__Simple_bench.cmti
ocaml/bitonic-sequence/lib/: dune
scala-study/: README.md
(+1381 files in other folders)
