(library
 (name bitonic)
 (modules bitonic)
)

(executable
 (name rest_server)
 (modules rest_server)
 (libraries bitonic dream redis-lwt yojson lwt)
)

(executable
 (name simple_bench)
 (modules simple_bench)
 (libraries bitonic unix)
)

(test
 (name bitonic_test)
 (modules bitonic_test)
 (libraries bitonic oUnit)
)
